--- a/LAB_4/Makefile
+++ b/LAB_4/Makefile
@@ -1,9 +1,9 @@
 all:
-	gcc -o exe main.c #-std=c11 -_XOPEN_SOURCE
-	gcc -o cexe mainn.c #-std=c11 -_XOPEN_SOURCE
+	gcc -o file main.c #-std=c11 -_XOPEN_SOURCE
+	gcc -o cfile mainn.c #-std=c11 -_XOPEN_SOURCE
 rm:
-	rm -rf *.o exe
+	rm -rf *.o file
 cl:
-	gcc -o cexe mainn.c #-std=c11 -_XOPEN_SOURCE
+	gcc -o cfile mainn.c #-std=c11 -_XOPEN_SOURCE
 se:
-	gcc -o exe main.c #-std=c11 -_XOPEN_SOURCE
+	gcc -o file main.c #-std=c11 -_XOPEN_SOURCE
