--- a/LAB_7/Makefile
+++ b/LAB_7/Makefile
@@ -1,4 +1,4 @@
 all:
-	gcc -o exe main.c -std=c11 -lpthread -D_XOPEN_SOURCE=600
+	gcc -o file main.c -std=c11 -lpthread -D_XOPEN_SOURCE=600
 rm:
-	rm -rf *.o exe
+	rm -rf *.o file
