--- a/LAB_8/Makefile
+++ b/LAB_8/Makefile
@@ -1,9 +1,9 @@
 all:
-	gcc -o exe main.c -lpthread #-std=c11 -_XOPEN_SOURCE
-	gcc -o cexe mainc.c -lpthread #-std=c11 -_XOPEN_SOURCE
+	gcc -o file main.c -lpthread #-std=c11 -_XOPEN_SOURCE
+	gcc -o cfile mainc.c -lpthread #-std=c11 -_XOPEN_SOURCE
 rm:
-	rm -rf *.o exe
+	rm -rf *.o file
 cl:
-	gcc -o cexe mainc.c -lpthread #-std=c11 -_XOPEN_SOURCE
+	gcc -o cfile mainc.c -lpthread #-std=c11 -_XOPEN_SOURCE
 se:
-	gcc -o exe main.c -lpthread #-std=c11 -_XOPEN_SOURCE
+	gcc -o file main.c -lpthread #-std=c11 -_XOPEN_SOURCE
